added DEVTODOS.md and cleanup progress pt. 2

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -105,15 +105,13 @@
     "    for item in data:\n",
     "        test_case = chain.invoke({\"ui_element\": str(item), \"url\": url})\n",
     "        test_case = remove_common_error(test_case)\n",
+    "        # Note : There is no error checking unlike in table generation, to ensure that all scraped data have a test case generated\n",
     "        return_data.append(test_case)\n",
     "        # LLM Reset To Free Up Context\n",
     "        chain = load_model_chain(template, model_str)\n",
     "        if (DEBUG_SETTING == 1):\n",
     "            print(f\"test case {i} out of {total} generated\")\n",
     "        i += 1\n",
-    "        # If i is a multiple of 3, refresh request.session['llm_output']\n",
-    "        # if i % 3 == 0:\n",
-    "        #     set_llm_output(return_data)\n",
     "\n",
     "    return return_data"
    ]
@@ -146,7 +144,12 @@
     "# # Get LLM Output\n",
     "# # - Use during / after generation\n",
     "# def get_llm_output():\n",
-    "#     return request.session['llm_output']"
+    "#     return request.session['llm_output']\n",
+    "\n",
+    "## In generating test cases\n",
+    "    # If i is a multiple of 3, refresh request.session['llm_output']\n",
+    "    # if i % 3 == 0:\n",
+    "    #     set_llm_output(return_data)   "
    ]
   },
   {
