--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -69,7 +69,8 @@
     "# - After each UI element scraped, a corresponding sub id is created to address duplicates in UI elements\n",
     "# - Duplicates in UI Elements exist as an attempt to make the LLM focus on the attributes present\n",
     "# Returns Data and Ids through a list of lists\n",
-    "def data_scrape(url):\n",
+    "# Can Return Data Only Through a Boolean Argument\n",
+    "def data_scrape(url, data_only : bool = False):\n",
     "    driver = setup_driver()\n",
     "    data = []\n",
     "    ids = []\n",
@@ -220,7 +221,8 @@
     "    # Close the browser\n",
     "    driver.quit()\n",
     "\n",
-    "    data = [data, ids]\n",
+    "    if data_only == False:\n",
+    "        data = [data, ids]\n",
     "\n",
     "    return data"
    ]
