--- a/fine_tuning/dataset_correction.ipynb
+++ b/fine_tuning/dataset_correction.ipynb
@@ -28,6 +28,14 @@
     "        \"cycle3_3000_test.csv\",\n",
     "        \"cycle3_train.csv\",\n",
     "        \"cycle3_test.csv\",\n",
+    "        \"cycle3_1000_trainformatted.csv\",\n",
+    "        \"cycle3_1000_testformatted.csv\",\n",
+    "        \"cycle3_2000_trainformatted.csv\",\n",
+    "        \"cycle3_2000_testformatted.csv\",\n",
+    "        \"cycle3_3000_trainformatted.csv\",\n",
+    "        \"cycle3_3000_testformatted.csv\",\n",
+    "        \"cycle3_trainformatted.csv\",\n",
+    "        \"cycle3_testformatted.csv\",\n",
     "        ]\n",
     "sep = \",\" # \\t\n",
     "random_state = 4000\n",
@@ -127,7 +135,7 @@
    "outputs": [],
    "source": [
     "## RUN SETTINGS\n",
-    "RUN_SETTINGS = 2\n",
+    "RUN_SETTINGS = 0\n",
     "\n",
     "## RUN -1 : [DEPRECATED] Correct Collected Dataset Based on Batch Settings\n",
     "if RUN_SETTINGS == -1:\n",
@@ -154,6 +162,7 @@
     "\n",
     "## RUN 0: From a full dataset, sample to several split datasets with different sizes\n",
     "if RUN_SETTINGS == 0:\n",
+    "    limit = 3000\n",
     "    df = pd.read_csv(csv, sep=sep)\n",
     "    sample_list = [1000, 2000, 3000, 4000]\n",
     "    first_split = .8\n",
@@ -164,9 +173,14 @@
     "        splits = dataset_splitter(dataframe, sample_size, .8)\n",
     "        i = 0\n",
     "        for i in range(len(splits)):\n",
-    "            splits[i].to_csv(f\"{csv.replace(\"_full.csv\", \"\")}_{sample_size}_{split_names[i]}.csv\", sep=sep, encoding='utf-8', index=False, header=True)\n",
-    "            formatted_split = correction_dataset(splits[i], \"C\")\n",
-    "            formatted_split.to_csv(f\"{csv.replace(\"_full.csv\", \"\")}_{sample_size}_{split_names[i]}formatted.csv\", sep=sep, encoding='utf-8', index=False, header=True)\n",
+    "            if sample_size > limit:\n",
+    "                splits[i].to_csv(f\"{csv.replace(\"_full.csv\", \"\")}_{split_names[i]}.csv\", sep=sep, encoding='utf-8', index=False, header=True)\n",
+    "                formatted_split = correction_dataset(splits[i], \"C\")\n",
+    "                formatted_split.to_csv(f\"{csv.replace(\"_full.csv\", \"\")}_{split_names[i]}formatted.csv\", sep=sep, encoding='utf-8', index=False, header=True)\n",
+    "            else:\n",
+    "                splits[i].to_csv(f\"{csv.replace(\"_full.csv\", \"\")}_{sample_size}_{split_names[i]}.csv\", sep=sep, encoding='utf-8', index=False, header=True)\n",
+    "                formatted_split = correction_dataset(splits[i], \"C\")\n",
+    "                formatted_split.to_csv(f\"{csv.replace(\"_full.csv\", \"\")}_{sample_size}_{split_names[i]}formatted.csv\", sep=sep, encoding='utf-8', index=False, header=True)\n",
     "\n",
     "## RUN 1: From a batch of datasets, correct input and instruction contents\n",
     "if RUN_SETTINGS == 1:\n",
