--- a/fine_tuning/fine_tuning_notebook.ipynb
+++ b/fine_tuning/fine_tuning_notebook.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "### Fine Tuning\n",
-    "- Using Unsloth\n",
-    "- Code is a slightly modified version of the code provided in the Unsloth Github Repository"
+    "- Using Unsloth, Hugging Face, Google Colab, and others\n",
+    "- Code is a slightly modified version of the code provided in the Unsloth Github Repository (Llama 3.1 8b Notebook)"
    ]
   },
   {
@@ -33,17 +33,22 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
-    "!pip install --no-deps cut_cross_entropy unsloth_zoo\n",
-    "!pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
-    "!pip install --no-deps unsloth"
+    "import os\n",
+    "if \"COLAB_\" not in \"\".join(os.environ.keys()):\n",
+    "    !pip install unsloth\n",
+    "else:\n",
+    "    # Do this only in Colab notebooks! Otherwise use pip install unsloth\n",
+    "    !pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
+    "    !pip install --no-deps cut_cross_entropy unsloth_zoo\n",
+    "    !pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
+    "    !pip install --no-deps unsloth"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Fine-Tuning Setup"
+    "##### Main Model, Main Tokenizer Setup"
    ]
   },
   {
@@ -54,36 +59,36 @@
    "source": [
     "from unsloth import FastLanguageModel\n",
     "import torch\n",
-    "\n",
+    "# ------------------------------------------------------------------------------------------\n",
     "## Setup\n",
     "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
     "dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
     "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
-    "\n",
+    "# ------------------------------------------------------------------------------------------\n",
     "## Load Llama 3.1\n",
-    "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "main_model, main_tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name = \"unsloth/Meta-Llama-3.1-8B\",\n",
     "    max_seq_length = max_seq_length,\n",
     "    dtype = dtype,\n",
     "    load_in_4bit = load_in_4bit,\n",
     "    # token = \"hf_...\", # use one if using gated models like meta-llama/Llama-2-7b-hf\n",
     ")\n",
-    "\n",
-    "## Default Unsloth Settings\n",
-    "model = FastLanguageModel.get_peft_model(\n",
-    "    model,\n",
-    "    r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
-    "    target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
-    "                      \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
-    "    lora_alpha = 16,\n",
-    "    lora_dropout = 0, # Supports any, but = 0 is optimized\n",
-    "    bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
-    "    use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
-    "    random_state = 3407,\n",
-    "    use_rslora = False,  # We support rank stabilized LoRA\n",
-    "    loftq_config = None, # And LoftQ\n",
-    ")\n",
-    "\n",
+    "# ------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Dataset Loading Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Data Loading and Alpaca Prompt Setup (Default Prompt Setup for Llama 3.1)\n",
     "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
     "\n",
@@ -96,7 +101,7 @@
     "### Response:\n",
     "{}\"\"\"\n",
     "\n",
-    "EOS_TOKEN = tokenizer.eos_token # Must add EOS_TOKEN\n",
+    "EOS_TOKEN = main_tokenizer.eos_token # Must add EOS_TOKEN\n",
     "def formatting_prompts_func(examples):\n",
     "    instructions = examples[\"instruction\"]\n",
     "    inputs       = examples[\"input\"]\n",
@@ -109,11 +114,273 @@
     "    return { \"text\" : texts, }\n",
     "pass\n",
     "\n",
-    "from datasets import load_dataset\n",
-    "dataset_location = \"/content/drive/MyDrive/Fine-Tuning Llama 3.1 For Test Cases/Cycle2_dataset - train reformatted.csv\"\n",
-    "dataset = load_dataset('csv', data_files=dataset_location, split = \"train\")\n",
-    "dataset = dataset.map(formatting_prompts_func, batched = True,)"
+    "print(f\"EOS TOKEN : {EOS_TOKEN}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Train and Save Based on Parameters Function\n",
+    "- Does not include the evaluation aspect (perplexity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Trainer Setup Imports\n",
+    "from trl import SFTTrainer\n",
+    "from transformers import TrainingArguments\n",
+    "from unsloth import is_bfloat16_supported\n",
+    "\n",
+    "def train_evaluate_sets(used_parameters, main_model, main_tokenizer, dataset, test_dataset):\n",
+    "    parameters = f\"{used_parameters[0]}_{used_parameters[1]}_{used_parameters[2]}_{used_parameters[3]}_{used_parameters[4]}\"\n",
+    "    model = None\n",
+    "    tokenizer = None\n",
+    "    ## Default Unsloth Settings\n",
+    "    model = FastLanguageModel.get_peft_model(\n",
+    "        main_model,\n",
+    "        r = 16, # Choose any number > 0 ! Suggested 8, 16, 32, 64, 128\n",
+    "        target_modules = [\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
+    "                          \"gate_proj\", \"up_proj\", \"down_proj\",],\n",
+    "        lora_alpha = 16,\n",
+    "        lora_dropout = 0, # Supports any, but = 0 is optimized\n",
+    "        bias = \"none\",    # Supports any, but = \"none\" is optimized\n",
+    "        use_gradient_checkpointing = \"unsloth\", # True or \"unsloth\" for very long context\n",
+    "        random_state = 3407,\n",
+    "        use_rslora = False,  # We support rank stabilized LoRA\n",
+    "        loftq_config = None, # And LoftQ\n",
+    "    )\n",
+    "    tokenizer = main_tokenizer\n",
+    "    # ------------------------------------------------------------------------------------------\n",
+    "    #------------------------------------------------------------------------------------------\n",
+    "    ###################\n",
+    "    ## Trainer Setup ##\n",
+    "    ###################\n",
+    "    #------------------------------------------------------------------------------------------\n",
+    "    trainer = SFTTrainer(\n",
+    "        model = model,\n",
+    "        tokenizer = tokenizer,\n",
+    "        train_dataset = dataset,\n",
+    "        dataset_text_field = \"text\",\n",
+    "        max_seq_length = max_seq_length,\n",
+    "        dataset_num_proc = 2,\n",
+    "        packing = False,\n",
+    "        args = TrainingArguments(\n",
+    "            per_device_train_batch_size = used_parameters[0],\n",
+    "            gradient_accumulation_steps = used_parameters[1],\n",
+    "            warmup_steps = used_parameters[2],\n",
+    "            # num_train_epochs = 1,\n",
+    "            max_steps = used_parameters[3],\n",
+    "            learning_rate = used_parameters[4],\n",
+    "            fp16 = not is_bfloat16_supported(),\n",
+    "            bf16 = is_bfloat16_supported(),\n",
+    "            logging_steps = 1,\n",
+    "            optim = \"adamw_8bit\",\n",
+    "            weight_decay = 0.01,\n",
+    "            lr_scheduler_type = \"linear\",\n",
+    "            seed = 3407,\n",
+    "            output_dir = \"outputs\",\n",
+    "            report_to = \"none\",\n",
+    "        ),\n",
+    "    )\n",
+    "    #------------------------------------------------------------------------------------------\n",
+    "    #####################\n",
+    "    ## Training Proper ##\n",
+    "    #####################\n",
+    "    #------------------------------------------------------------------------------------------\n",
+    "    # @title Show current memory stats\n",
+    "    gpu_stats = torch.cuda.get_device_properties(0)\n",
+    "    start_gpu_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
+    "    max_memory = round(gpu_stats.total_memory / 1024 / 1024 / 1024, 3)\n",
+    "    print(f\"GPU = {gpu_stats.name}. Max memory = {max_memory} GB.\")\n",
+    "    print(f\"{start_gpu_memory} GB of memory reserved.\")\n",
+    "\n",
+    "    trainer_stats = trainer.train()\n",
+    "\n",
+    "    # @title Show final memory and time stats\n",
+    "    used_memory = round(torch.cuda.max_memory_reserved() / 1024 / 1024 / 1024, 3)\n",
+    "    used_memory_for_lora = round(used_memory - start_gpu_memory, 3)\n",
+    "    used_percentage = round(used_memory / max_memory * 100, 3)\n",
+    "    lora_percentage = round(used_memory_for_lora / max_memory * 100, 3)\n",
+    "    print(f\"{trainer_stats.metrics['train_runtime']} seconds used for training.\")\n",
+    "    print(\n",
+    "        f\"{round(trainer_stats.metrics['train_runtime']/60, 2)} minutes used for training.\"\n",
+    "    )\n",
+    "    print(f\"Peak reserved memory = {used_memory} GB.\")\n",
+    "    print(f\"Peak reserved memory for training = {used_memory_for_lora} GB.\")\n",
+    "    print(f\"Peak reserved memory % of max memory = {used_percentage} %.\")\n",
+    "    print(f\"Peak reserved memory for training % of max memory = {lora_percentage} %.\")\n",
+    "    #------------------------------------------------------------------------------------------\n",
+    "    ############\n",
+    "    ## Saving ##\n",
+    "    ############\n",
+    "    #------------------------------------------------------------------------------------------\n",
+    "    save_name = f\"{parameters}\"\n",
+    "    model.save_pretrained(f\"{save_name}_lora_model\")\n",
+    "    tokenizer.save_pretrained(f\"{save_name}_lora_model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Main Program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Train several llama3.1 models based on parameter settings\n",
+    "\n",
+    "SETTING = 0\n",
+    "# Trainer Parameters SET 0:\n",
+    "#   learning rate: 2e-4 | 1e-4\n",
+    "#   per_device_train_batch_size : 2\n",
+    "#   gradient_accumulation_steps : 4 | 8\n",
+    "#   warmup_steps : 5\n",
+    "#   max_steps : 30 | 45\n",
+    "\n",
+    "## Parameter Sets\n",
+    "parameter_sets = [\n",
+    "        [\n",
+    "           [2, 4, 5, 20, 2e-4], # Training Loss | Perplexity \n",
+    "           [4, 8, 5, 30, 1e-4], # Training Loss | Perplexity \n",
+    "        ],\n",
+    "    ]\n",
+    "\n",
+    "## Set used parameters and start set training\n",
+    "used_parameters = parameter_sets[SETTING]\n",
+    "for parameters in used_parameters:\n",
+    "    train_evaluate_sets(parameters, main_model, main_tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Additional Utilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## LORA Saving\n",
+    "if False:\n",
+    "    model.save_pretrained(\"lora_model\")  # Local saving\n",
+    "    tokenizer.save_pretrained(\"lora_model\")\n",
+    "    # model.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving\n",
+    "    # tokenizer.push_to_hub(\"your_name/lora_model\", token = \"...\") # Online saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Loading LORA Model\n",
+    "lora_model = \"/content/drive/MyDrive/lora_model\" # Lora Model to be loaded\n",
+    "\n",
+    "if True:\n",
+    "    max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
+    "    dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
+    "    load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
+    "\n",
+    "    from unsloth import FastLanguageModel\n",
+    "    model, tokenizer = FastLanguageModel.from_pretrained(\n",
+    "        model_name = lora_model,\n",
+    "        max_seq_length = max_seq_length,\n",
+    "        dtype = dtype,\n",
+    "        load_in_4bit = load_in_4bit,\n",
+    "    )\n",
+    "    FastLanguageModel.for_inference(model) # Enable native 2x faster inference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Download without losing runtime\n",
+    "import time\n",
+    "\n",
+    "# 5 minutes\n",
+    "i = 0\n",
+    "while i<100:\n",
+    "  time.sleep(3)\n",
+    "  i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Alpaca Prompt Copy\n",
+    "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{}\n",
+    "\n",
+    "### Input:\n",
+    "{}\n",
+    "\n",
+    "### Response:\n",
+    "{}\"\"\"\n",
+    "\n",
+    "# Alpaca Prompt -> Output\n",
+    "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
+    "inputs = tokenizer(\n",
+    "[\n",
+    "    alpaca_prompt.format(\n",
+    "        \"Generate a test case for the following UI Element: Link Element 'Euskara' With URL https://eu.wikipedia.org/wiki/ from the website: https://en.wikipedia.org/wiki/Main_Page\", # instruction #\n",
+    "        \"\", # input\n",
+    "        \"\", # output - leave this blank for generation!\n",
+    "    ),\n",
+    "], return_tensors = \"pt\").to(\"cuda\")\n",
+    "output = model.generate(**inputs, max_new_tokens = 64, use_cache = True)\n",
+    "\n",
+    "print(tokenizer.batch_decode(output))\n",
+    "\n",
+    "# Expected Prompt -> Output\n",
+    "from transformers import TextStreamer\n",
+    "FastLanguageModel.for_inference(model) # Enable native 2x faster inference\n",
+    "inputs = tokenizer(\n",
+    "[\n",
+    "    \"Link Element 'Euskara' With URL https://eu.wikipedia.org/wiki/ from the website: https://en.wikipedia.org/wiki/Main_Page\"\n",
+    "], return_tensors = \"pt\").to(\"cuda\")\n",
+    "\n",
+    "text_streamer = TextStreamer(tokenizer)\n",
+    "output = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)\n",
+    "\n",
+    "print(tokenizer.batch_decode(output))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ~What follows from here are old / legacy code from previous cycles~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
