--- a/fine_tuning/evaluation_notebook.ipynb
+++ b/fine_tuning/evaluation_notebook.ipynb
@@ -5,9 +5,8 @@
    "metadata": {},
    "source": [
     "### Evaluation Notebook\n",
-    "- Evaluating perplexity and hallucination (Automated evaluation metrics)\n",
-    "- Perplexity is calculated using Huggingface\n",
-    "- Hallucination is calculated using SelfCheckGPT score/s"
+    "- Evaluating perplexity (Automated evaluation metric)\n",
+    "- Perplexity is calculated using Huggingface"
    ]
   },
   {
@@ -23,9 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install selfcheckgpt\n",
-    "! pip install spacy\n",
-    "\n",
     "from google.colab import drive\n",
     "drive.mount('/content/drive')"
    ]
@@ -63,8 +59,139 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Perplexity"
+    "##### Loading Test Dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Data Loading and Alpaca Prompt Setup (Default Prompt Setup for Llama 3.1)\n",
+    "alpaca_prompt = \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{}\n",
+    "\n",
+    "### Input:\n",
+    "{}\n",
+    "\n",
+    "### Response:\n",
+    "{}\"\"\"\n",
+    "\n",
+    "EOS_TOKEN = tokenizer.eos_token # Must add EOS_TOKEN\n",
+    "def formatting_prompts_func(examples):\n",
+    "    instructions = examples[\"instruction\"]\n",
+    "    inputs       = examples[\"input\"]\n",
+    "    outputs      = examples[\"output\"]\n",
+    "    texts = []\n",
+    "    for instruction, input, output in zip(instructions, inputs, outputs):\n",
+    "        # Must add EOS_TOKEN, otherwise your generation will go on forever!\n",
+    "        text = alpaca_prompt.format(instruction, input, output) + EOS_TOKEN\n",
+    "        texts.append(text)\n",
+    "    return { \"text\" : texts, }\n",
+    "pass\n",
+    "\n",
+    "def preprocess_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], truncation=True)\n",
+    "\n",
+    "from datasets import load_dataset\n",
+    "test_dataset_location = f\"/content/drive/MyDrive/cycle3_test.csv\"\n",
+    "test_dataset = load_dataset('csv', data_files=test_dataset_location, split = \"train\")\n",
+    "test_dataset = test_dataset.map(formatting_prompts_func, batched = True,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Perplexity Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------------------------------------------------------------------\n",
+    "## Perplexity Test Setups\n",
+    "from transformers import LlamaTokenizer, LlamaForCausalLM\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import DataCollatorForLanguageModeling\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "import pandas as pd\n",
+    "from datasets import Dataset\n",
+    "\n",
+    "# Evaluate Perplexity using Torch\n",
+    "def compute_perplexity(model, dataset, tokenizer):\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    model = model.to(device)\n",
+    "\n",
+    "    tokenized_dataset = dataset.map(preprocess_function, batched=True, remove_columns=[\"output\", \"input\", \"instruction\", \"text\"])\n",
+    "    data_collator = DataCollatorForLanguageModeling(tokenizer, mlm=False)\n",
+    "    dataloader = DataLoader(tokenized_dataset, collate_fn=data_collator, batch_size=8)\n",
+    "\n",
+    "    model.eval()\n",
+    "    total_loss = 0\n",
+    "    total_length = 0\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for batch in tqdm(dataloader, desc=\"Evaluating\", leave=True):\n",
+    "            inputs = batch[\"input_ids\"].to(device)\n",
+    "            outputs = model(inputs, labels=inputs)\n",
+    "            loss = outputs.loss\n",
+    "            total_loss += loss.item() * inputs.size(1)\n",
+    "            total_length += inputs.size(1)\n",
+    "\n",
+    "    avg_loss = total_loss / total_length\n",
+    "    perplexity = torch.exp(torch.tensor(avg_loss))\n",
+    "    return perplexity.item()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Main Program"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "perplexity = compute_perplexity(model, test_dataset, tokenizer)\n",
+    "print(f\"Perplexity: {perplexity}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Notes:\n",
+    "- There is another evaluation metric considered (hallucination) through SelfCheckGPT (), however\n",
+    "  - Hallucination metric relies on an LLM evaluating another LLM and,\n",
+    "  - Hallucination can be better checked through human inspection / evaluation, prompting the team to focus on perplexity as the automated evaluation metric instead."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ~What follows from here are old / legacy code from previous cycles~"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
